[gd_scene load_steps=6 format=3 uid="uid://ogocgp6mobke"]

[ext_resource type="Script" uid="uid://cubpfrr44642v" path="res://scenes/endless_runner/endless_runner_popups.gd" id="1_sqbng"]
[ext_resource type="Texture2D" uid="uid://v2vmphtkgboe" path="res://assets/art/ui/PauseButtonIcon.png" id="2_jgys4"]
[ext_resource type="PackedScene" uid="uid://cv0pcnqkje6xm" path="res://scenes/ui/game_over_menu.tscn" id="2_yywdt"]
[ext_resource type="PackedScene" uid="uid://cnmf4ghisg08r" path="res://scenes/ui/pause_menu.tscn" id="4_jgys4"]

[sub_resource type="LabelSettings" id="LabelSettings_sqbng"]
font_size = 64

[node name="EndlessRunnerPopups" type="CanvasLayer" node_paths=PackedStringArray("_go_screen", "_go_screen_hide_timer", "_ready_screen", "_hud", "game_over_menu", "pause_menu", "_popups", "_pause_button")]
script = ExtResource("1_sqbng")
_go_screen = NodePath("GoScreen")
_go_screen_hide_timer = NodePath("GoScreen/HideTimer")
_ready_screen = NodePath("ReadyScreen")
_hud = NodePath("HUD")
game_over_menu = NodePath("GameOverMenu")
pause_menu = NodePath("PauseMenu")
_popups = [NodePath("ReadyScreen"), NodePath("GoScreen"), NodePath("GameOverMenu"), NodePath("GameOverMenu"), NodePath("PauseMenu")]
_pause_button = NodePath("HUD/PauseButton")

[node name="ReadyScreen" type="ColorRect" parent="."]
offset_left = 232.0
offset_top = 488.0
offset_right = 848.0
offset_bottom = 568.0
color = Color(0, 1, 1, 1)

[node name="ReadyScreen" type="Label" parent="ReadyScreen"]
layout_mode = 0
offset_top = -520.0
offset_right = 616.0
offset_bottom = -264.0
text = "READY...."
label_settings = SubResource("LabelSettings_sqbng")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="ReadyScreen"]
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 535.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "Sleeping people wake up"

[node name="GoScreen" type="Label" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
text = "GO!!!




"
label_settings = SubResource("LabelSettings_sqbng")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HideTimer" type="Timer" parent="GoScreen"]
wait_time = 0.5
one_shot = true

[node name="HUD" type="Label" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
label_settings = SubResource("LabelSettings_sqbng")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_right = -40.0
offset_bottom = 40.0
grow_horizontal = 0
scale = Vector2(2, 2)
texture_normal = ExtResource("2_jgys4")

[node name="GameOverMenu" parent="." instance=ExtResource("2_yywdt")]

[node name="PauseMenu" parent="." instance=ExtResource("4_jgys4")]

[connection signal="toggled" from="ReadyScreen/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="timeout" from="GoScreen/HideTimer" to="." method="_on_screen_text_hide_timer_timeout"]
